<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2015 Google Inc. All Rights Reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:spellcast="http://schemas.android.com/apk/res-auto" >
            android:orientation="vertical">

    <PreferenceCategory>

        <EditTextPreference
            android:defaultValue="@string/pref_character_name_default"
            android:dialogTitle="@string/pref_character_name_title"
            android:inputType="textPersonName"
            android:key="@string/pref_character_name_key"
            android:title="@string/pref_character_name_title"
            android:persistent="true">
        </EditTextPreference>

        <com.google.cast.samples.games.spellcast.PickCharacterAvatarPreference
            android:defaultValue="@integer/pref_avatar_default"
            android:dialogTitle="@string/pref_avatar"
            android:key="@string/pref_avatar_key"
            android:layout="@layout/spellcast_character_avatar_preference"
            android:title="@string/pref_avatar">
        </com.google.cast.samples.games.spellcast.PickCharacterAvatarPreference>

        <ListPreference
            android:defaultValue="@string/pref_difficulty_default"
            android:dialogTitle="@string/pref_difficulty_title"
            android:entries="@array/pref_difficulty_entries"
            android:entryValues="@array/pref_difficulty_values"
            android:key="pref_difficulty_key"
            android:title="@string/pref_difficulty_title" >
        </ListPreference>

        <Preference android:title="@string/button_ok"
            android:key="@string/pref_button_ok"/>

    </PreferenceCategory>

</PreferenceScreen>
